# quantitative-platform

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: CMakeLists.txt  main.cpp
src/core/: core.cpp  types.hpp
src/data/: data_layer.cpp  data_layer.hpp  database.cpp  database.hpp
src/data/ctp/: ctp_types.hpp  md_adapter.cpp  md_adapter.hpp  trader_adapter.cpp  trader_adapter.hpp
src/data/okx/: okx_adapter.cpp  okx_adapter.hpp
src/engine/: backtest_engine.cpp  backtest_engine.hpp  dll_loader.cpp  dll_loader.hpp  report.hpp  strategy_interface.hpp
src/ui/: account_panel.cpp  account_panel.hpp  backtest_panel.cpp  backtest_panel.hpp  chart_panel.cpp  chart_panel.hpp  mainwindow.cpp  mainwindow.hpp  strategy_panel.cpp  strategy_panel.hpp  trade_panel.cpp  trade_panel.hpp
strategies/: CMakeLists.txt
strategies/sma_crossover/: sma_crossover.cpp  sma_crossover.hpp
tests/: CMakeLists.txt  test_database.cpp  test_engine.cpp
